.argocd-state/portfolio-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
        - name: portfolio-website
          image: ghcr.io/nasus20202/portfolio-website:2.632.0
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 10Mi
          volumeMounts:
            - name: nginx-snippets
              mountPath: /etc/nginx/conf.d/rybbit-subfilter.conf
              subPath: rybbit-subfilter.conf
      volumes:
        - name: nginx-snippets
          configMap:
            name: nginx-snippets
