.argocd-state/portfolio-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website
spec:
  selector:
    app: portfolio-website
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
